smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/invalid-escape-hex.smithy
// Syntax error at line 4, column 16: Error parsing quoted string: Invalid escape found in string: `\x` | Model
namespace smithy.example

@documentation("\x00")
string MyString
